# vacances-scolaires-france

./: pyproject.toml
tests/: test_init.py
vacances_scolaires_france/: __init__.py
vacances_scolaires_france/settings/: __init__.py
