[tool.poetry]
name = "vacances-scolaires-france"
version = "0.1.0"
description = ""
authors = ["Julien Cheillan <julien_cheillan@connect-tech.sncf>"]
readme = "README.md"
packages = [{include = "vacances_scolaires_france"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
